# bioparquet-sandbox

./: .gitignore  CITATION.cff  README.md  bioparquet_example.parquet  bioparquet_schema.py  example_table.py  foundingGIDE_metadata_fields.md  foundingGIDE_metadata_fields.xlsx  gide_example.parquet  gide_schema.py  pyproject.toml
.github/workflows/: tag_and_publish.yml  test_and_lint.yml  update_schema_doc.yml
docs/source/: conf.py
resources/: bioparquet_example.parquet  bioparquet_schema.md
src/bioparquet_sandbox/: __init__.py  example.py  schema.py  visualize.py
tests/: __init__.py  test_example.py  test_schema.py  test_visualize.py
